# cppfcgi

./: CMakeLists.txt  README.md  SConstruct
cxx/include/komm/: fcgi.hpp  global.h  logic.h  sock.h
cxx/source/: fcgi.cpp  global_impl.cpp  global_impl.h  libfcgi_test.cpp  main.cpp  sock_impl.cpp  sock_impl.h
